fixes description text overflow

--- a/src/indigo/less/outer-pages.less
+++ b/src/indigo/less/outer-pages.less
@@ -500,11 +500,13 @@
     &-description {
         display: none;
         color: #ddd;
+        font-size: 12px;
     }
 
     &-link {
         color: #ddd;
         margin-left: 4px;
+        font-size: 12px;
     }
 
     &-label {
